# PyCode

./: .clangd  .flake8  .gitignore  .pylintrc  CMakeLists.txt  CMakePresets.json  FindHDF5.cmake  HDF5-debug-x86_64-data.cmake  HDF5Config.cmake  HDF5ConfigVersion.cmake  HDF5Targets.cmake  LICENSE  README.md  ZLIB-debug-x86_64-data.cmake  conan_toolchain.cmake  conanbuildenv-debug-x86_64.bat  conandeps_legacy.cmake  conanfile.py  conanfile.txt  module-HDF5-Target-debug.cmake  module-HDF5-debug-x86_64-data.cmake  module-HDF5Targets.cmake  project.ps1  pyproject.toml
Tools/: meanwhile.py  tui.css  tui.py
cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake/.qt/: QtDeploySupport.cmake
doc/: Library diagram.drawio  install.org
include/: prelude.hpp  python.hpp
include/codepp/: codepp.hpp  hdf5.hpp  python.hpp
include/codepp/hdf5/: h5analog.hpp  h5content.hpp  h5utils.hpp  type_inspector.hpp
include/codepp/types/: signal.hpp
native_pycode/: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt  project.ps1
native_pycode/cmake/: compiler.cmake  dotnet.cmake  utils.cmake
native_pycode/include/: hdf5.hpp  placeholder.hpp
native_pycode/src/: hdf5.cpp  main.cpp  python.cpp
pycode/: experiment.py  hdf5.py  io.py  operation.py  spycode.py  utils.py
pycode/matlab/: convert_mcd.m  filter_data.m  listdir.m  spike_detection.m  store_experiment.m
pycode_tools/: meanwhile.py
pycode_tools/gui/: main.py
pycode_tools/tui/: root.py
src/: __init__.py  hdf5.cpp  main.cpp  matlab.py  python.cpp  spycode.py
src/codepp/hdf5/: h5analog.cpp  h5content.cpp  h5utils.cpp  type_inspector.cpp
stored_junk/: utils.py
tests/: add_digital.py  gui.py  main.py  test.py  test_spikes_detection.py
tools/: main.py  tui.css  tui.py
