[tool.poetry]
name = "pycode"
version = "0.1.0"
description = ""
authors = ["lmascelli <lmascelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.0.0"
matplotlib = "^3.0.0"
scipy = "^1.0.0"
h5py = "^3.0.0"
PySide6  = "^6.6.0"
textual = "*"
rich_pixels = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
